overflow fix 11

--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@ a.white-mode:hover, a.white-mode:link:hover, a.white-mode:visited:hover, a.white
 body {
   margin: 0;
   padding: 0;
-	overflow-y: hidden;
+	overflow: hidden;
   width: 100%;
   height: 100%;
 	background: #000000;
@@ -378,13 +378,13 @@ body {
 	height: 100%;
 	top: 0;
 	left: 0;
-	visibility: hidden;
+	display: none;
 	background-color: #121536;
 	z-index: 155;
 }
 
 .pageload-overlay.show {
-	visibility: visible;
+	display: block;
 }
 
 .pageload-overlay svg {
